--- a/css/task-2.css
+++ b/css/task-2.css
@@ -3,21 +3,25 @@ img {
 }
 
 .gallery {
+  max-width: 1128px;
+  margin: 0 auto;
+
   padding: 0;
   display: flex;
   flex-wrap: wrap;
 
-  gap: 10px;
+  row-gap: 48px;
+  column-gap: 24px;
   list-style-type: none;
 }
 
 .gallery li {
-  height: 40vh;
-  flex-grow: 1;
+  flex-basis: calc((100% - 24px * 2) / 3);
+  height: 300px;
 }
 
 .gallery img {
-  max-height: 100%;
-  min-width: 100%;
+  min-height: 100%;
+  max-width: 100%;
   object-fit: cover;
 }
