--- a/css/task-3.css
+++ b/css/task-3.css
@@ -24,6 +24,13 @@ input {
 
   border-radius: 4px;
   border: 1px solid #808080;
+
+  transition: border-color 250ms ease-in-out;
+}
+
+input:hover,
+input:focus {
+  border-color: #000000;
 }
 
 input::placeholder {
